fixed z-index issue with stage_pushAndHold

--- a/_sass/content_stage_pressAndHold.scss
+++ b/_sass/content_stage_pressAndHold.scss
@@ -1,4 +1,5 @@
 #content_stage {
+  position: relative;
   width: 100%;
   height: 100vh;
   display: flex;
@@ -15,6 +16,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
+
+  //z-index: -1;
 }
 #content_stage_pressAndHold-btn:active {
   border-color: #003A75;
@@ -71,7 +74,6 @@
   bottom: 0;
   left: 0;
   overflow: hidden;
-  z-index: -100;
   clip-path: circle(var(--clipPath-radius-value) at center);
 }
 
